fix: spacing between elements

--- a/css/activities.css
+++ b/css/activities.css
@@ -32,6 +32,10 @@
 }
 
 @media screen and (max-width: 1024px) {
+  .activities {
+    padding: 0 20px;
+  }
+
   .activities .activities-card .card img {
     height: 270px;
   }
