--- a/css/filter.css
+++ b/css/filter.css
@@ -34,8 +34,9 @@
   font-size: 12px;
   margin-right: 10px;
   border: 1px solid #d9d9d9;
-  width: 24px;
-  height: 24px;
+  height: fit-content;
+  padding: 10px;
+  line-height: 5px;
   border-radius: 100%;
 }
 
@@ -50,6 +51,10 @@
 }
 
 @media screen and (max-width: 768px) {
+  .filters > p {
+    margin: 0 0 5px 0;
+  }
+
   .filters ul {
     gap: 10px;
     flex-wrap: wrap;
