--- a/css/hebergement-populaires.css
+++ b/css/hebergement-populaires.css
@@ -11,14 +11,26 @@
   box-sizing: border-box;
 }
 
-@media (max-width: 1024px) {
+@media screen and (max-width: 1024px) {
   .hebergements-and-populaires {
     flex-direction: column;
   }
+
+  .hebergements-and-populaires section.populaires {
+    border-radius: 0;
+  }
 }
 
-@media (max-width: 768px) {
+@media screen and (max-width: 768px) {
   .hebergements-and-populaires {
     flex-direction: column-reverse;
+  }
+
+  .hebergements-and-populaires section {
+    padding: 20px;
+  }
+
+  .hebergements-and-populaires section.populaires {
+    padding: 30px 20px;
   }
 }
