--- a/css/herbegement.css
+++ b/css/herbegement.css
@@ -52,6 +52,10 @@
 }
 
 @media screen and (max-width: 768px) {
+  .hebergements-and-populaires section.hebergements {
+    background-color: #fff;
+  }
+
   .hebergements-cards {
     flex-direction: column;
   }
