--- a/css/info.css
+++ b/css/info.css
@@ -3,3 +3,14 @@
   flex-direction: column;
   gap: 35px;
 }
+
+@media screen and (max-width: 768px) {
+  .info {
+    margin: 30px 0;
+    padding: 0 20px;
+  }
+
+  .info h1 {
+    margin-top: 0;
+  }
+}
