--- a/css/style.css
+++ b/css/style.css
@@ -106,7 +106,11 @@ section {
 }
 
 @media screen and (max-width: 360px) {
+  body {
+    margin: 0;
+  }
+
   .main-container {
-    padding: 0 10px;
+    padding: 0;
   }
 }
